crates/caffeine-ls/tests/snapshots/lsp_snapshots__kotlin_hover_method_declaration.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```kotlin\nfun distance(): Int\n```\n\nHow far the point is from the origin."
  }
}
