crates/caffeine-ls/tests/snapshots/lsp_snapshots__kotlin_semantic_tokens.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: rows
---
[
  "0:0:7 keyword package",
  "4:0:3 comment /**",
  "5:0:18 comment  * A KDoc comment.",
  "6:0:3 comment  */",
  "7:5:5 keyword class",
  "9:5:5 keyword class",
  "9:17:3 keyword val",
  "9:22:1 operator :",
  "9:29:3 keyword var",
  "9:34:1 operator :",
  "12:0:9 keyword interface",
  "13:4:3 keyword fun",
  "13:18:1 operator :",
  "13:27:1 operator :",
  "16:0:3 keyword fun",
  "16:4:1 operator <",
  "16:7:1 operator :",
  "16:15:1 operator >",
  "16:21:1 operator <",
  "16:23:1 operator >",
  "16:39:1 operator :",
  "16:42:1 operator ?",
  "16:44:1 operator =",
  "16:56:1 number 1",
  "18:0:5 keyword class",
  "18:11:1 operator :",
  "19:13:3 keyword fun",
  "19:27:1 operator :",
  "19:36:1 operator :",
  "20:8:3 keyword val",
  "20:18:1 operator =",
  "20:20:1 string \"",
  "20:21:7 string Hello, ",
  "20:28:1 string $",
  "20:33:1 string \"",
  "21:8:3 keyword var",
  "21:18:1 operator =",
  "21:20:1 number 0",
  "22:8:3 keyword for",
  "22:18:2 keyword in",
  "22:28:1 number 1",
  "22:31:1 number 2",
  "22:43:2 operator +=",
  "23:8:8 comment /* block",
  "24:0:21 comment            comment */",
  "25:8:6 keyword return",
  "25:21:1 operator +",
  "25:29:1 operator +",
  "25:36:3 number 4.0",
  "29:0:3 keyword fun",
  "30:4:3 keyword val",
  "30:16:1 operator =",
  "31:18:1 string \"",
  "31:19:2 string hi",
  "31:21:1 string \""
]
