crates/caffeine-ls/tests/snapshots/lsp_snapshots__kotlin_syntax_diagnostics.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: diagnostics
---
{
  "resultId": "a5cf877405291c35",
  "items": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 29
        },
        "end": {
          "line": 1,
          "character": 29
        }
      },
      "severity": 1,
      "code": "kotlin.unterminated-string",
      "source": "caffeine-ls",
      "message": "unclosed string literal"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 4
        }
      },
      "severity": 1,
      "code": "kotlin.expected-token",
      "source": "caffeine-ls",
      "message": "CLOSE_QUOTE expected"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 4
        }
      },
      "severity": 1,
      "code": "kotlin.expected-token",
      "source": "caffeine-ls",
      "message": "R_BRACE expected"
    }
  ],
  "kind": "full"
}
