crates/caffeine-ls/tests/snapshots/lsp_snapshots__lexer_errors.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: diagnostics
---
{
  "items": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 16
        },
        "end": {
          "line": 1,
          "character": 17
        }
      },
      "severity": 1,
      "source": "caffeine-ls",
      "message": "WIP"
    },
    {
      "range": {
        "start": {
          "line": 1,
          "character": 33
        },
        "end": {
          "line": 1,
          "character": 34
        }
      },
      "severity": 1,
      "source": "caffeine-ls",
      "message": "WIP"
    },
    {
      "range": {
        "start": {
          "line": 2,
          "character": 17
        },
        "end": {
          "line": 2,
          "character": 21
        }
      },
      "severity": 1,
      "source": "caffeine-ls",
      "message": "WIP"
    },
    {
      "range": {
        "start": {
          "line": 1,
          "character": 16
        },
        "end": {
          "line": 1,
          "character": 17
        }
      },
      "severity": 1,
      "source": "caffeine-ls",
      "message": "WIP"
    },
    {
      "range": {
        "start": {
          "line": 1,
          "character": 16
        },
        "end": {
          "line": 1,
          "character": 17
        }
      },
      "severity": 1,
      "source": "caffeine-ls",
      "message": "WIP"
    },
    {
      "range": {
        "start": {
          "line": 1,
          "character": 16
        },
        "end": {
          "line": 1,
          "character": 17
        }
      },
      "severity": 1,
      "source": "caffeine-ls",
      "message": "WIP"
    }
  ],
  "kind": "full"
}
