crates/caffeine-ls/tests/snapshots/lsp_snapshots__local_declaration_semantic_tokens.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: rows
---
[
  "0:0:7 keyword package",
  "0:8:11 namespace com.example",
  "2:0:5 keyword class",
  "2:6:5 class+declaration Outer",
  "3:4:3 keyword int",
  "3:8:5 property+declaration field",
  "5:4:4 keyword void",
  "5:9:3 method+declaration run",
  "5:13:3 keyword int",
  "5:17:5 parameter+declaration param",
  "6:8:5 keyword class",
  "6:14:5 class+declaration Local",
  "7:12:3 keyword int",
  "7:16:3 property+declaration own",
  "8:12:4 keyword void",
  "8:17:3 method+declaration use",
  "9:16:3 property+modification own",
  "9:20:1 operator =",
  "9:22:5 property field",
  "9:28:1 operator +",
  "9:30:5 parameter param",
  "12:8:9 keyword interface",
  "12:18:5 interface+declaration Shape",
  "13:12:3 keyword int",
  "13:16:4 method+declaration area",
  "15:8:5 keyword class",
  "15:14:6 class+declaration Circle",
  "15:21:10 keyword implements",
  "15:32:5 type Shape",
  "16:12:6 modifier public",
  "16:19:3 keyword int",
  "16:23:4 method+declaration area",
  "17:16:6 keyword return",
  "17:23:1 number 0",
  "20:15:5 struct+declaration Point",
  "20:21:3 keyword int",
  "20:25:1 property+declaration x",
  "20:28:3 keyword int",
  "20:32:1 property+declaration y",
  "21:12:3 keyword int",
  "21:16:3 method+declaration sum",
  "22:16:6 keyword return",
  "22:23:1 property+readonly x",
  "22:25:1 operator +",
  "22:27:1 property+readonly y",
  "25:8:4 keyword enum",
  "25:13:4 enum+declaration Kind",
  "25:20:1 enumMember+declaration A",
  "25:23:1 enumMember+declaration B",
  "27:8:5 type Local",
  "27:14:1 variable+declaration l",
  "27:16:1 operator =",
  "27:18:3 keyword new",
  "27:22:5 type Local",
  "28:8:1 variable l",
  "28:10:3 method use",
  "29:8:5 type Shape",
  "29:14:1 variable+declaration s",
  "29:16:1 operator =",
  "29:18:3 keyword new",
  "29:22:6 type Circle",
  "30:8:3 keyword int",
  "30:12:1 variable+declaration a",
  "30:14:1 operator =",
  "30:16:1 variable s",
  "30:18:4 method area",
  "31:8:5 type Point",
  "31:14:1 variable+declaration p",
  "31:16:1 operator =",
  "31:18:3 keyword new",
  "31:22:5 type Point",
  "31:28:1 number 1",
  "31:31:1 number 2",
  "32:8:3 keyword int",
  "32:12:1 variable+declaration t",
  "32:14:1 operator =",
  "32:16:1 variable p",
  "32:18:3 method sum",
  "32:24:1 operator +",
  "32:26:1 variable p",
  "32:28:1 property+readonly x",
  "33:8:4 type Kind",
  "33:13:1 variable+declaration k",
  "33:15:1 operator =",
  "33:17:4 variable Kind",
  "33:22:1 property+readonly+static A",
  "34:8:5 type Class",
  "34:13:1 operator <",
  "34:14:1 operator ?",
  "34:15:1 operator >",
  "34:17:1 variable+declaration c",
  "34:19:1 operator =",
  "34:21:5 type Local",
  "34:27:5 keyword class",
  "35:8:5 type Outer",
  "35:14:1 variable+declaration o",
  "35:16:1 operator =",
  "35:18:3 keyword new",
  "35:22:5 type Outer"
]
