crates/caffeine-ls/tests/snapshots/lsp_snapshots__parser_recovery_missing_semicolon.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: diagnostics
---
{
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 12
        },
        "end": {
          "line": 3,
          "character": 15
        }
      },
      "severity": 1,
      "source": "caffeine-ls",
      "message": "WIP"
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 8
        },
        "end": {
          "line": 4,
          "character": 9
        }
      },
      "severity": 1,
      "source": "caffeine-ls",
      "message": "WIP"
    }
  ],
  "kind": "full"
}
