crates/caffeine-ls/tests/snapshots/lsp_snapshots__references_cross_file.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: "reference_rows(&lsp, path, position, true)"
---
[
  {
    "uri": "file://<WORKSPACE_ROOT>/src/com/example/Api.java",
    "range": {
      "start": {
        "line": 7,
        "character": 16
      },
      "end": {
        "line": 7,
        "character": 19
      }
    }
  },
  {
    "uri": "file://<WORKSPACE_ROOT>/src/com/example/Main.java",
    "range": {
      "start": {
        "line": 4,
        "character": 12
      },
      "end": {
        "line": 4,
        "character": 15
      }
    }
  }
]
